# python-project-49

./: .gitignore  Makefile  README.md  brain_even_rec.cast  pyproject.toml
brain_games/: __init__.py  brain_even_game.py  cli.py  engine.py  exit_game.py  launcher.py  mini_games.py
brain_games/games/: calc.py  check_answer.py  engine_calc.py  engine_even.py  engine_gcd.py  engine_prime.py  engine_progression.py  even.py  exit_game.py  gcd.py  prime.py  progression.py  welcome_user.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_game.py  brain_games.py  brain_games1.py  brain_games_f_st.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/engine/: brain_progression.py  engine_progression.py  welcome.py
brain_games/scripts/engine/games/: brain_calc.py  brain_even.py  brain_progression.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_gcd.py  check_answer.py  engine_calc.py  engine_even.py  engine_gcd.py  engine_prime.py  engine_progression.py  welcome_user.py
example_of_games/: brain_calc.cast  brain_even.cast  brain_gcd.cast  brain_prime.cast  brain_progression.cast
