[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A collection of fun and challenging brain games designed to improve cognitive skills."
authors = ["Dmitry Yarinsky <pikachyshkaa@gmail.com>"]
packages = [
  { include = "brain_games" },
]

classifiers = [
    "Development Status :: 4 - Release",
    "Intended Audience :: Education",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

repository = "https://github.com/Pikachy337/python-project-49"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"
flake8 = "^7.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games_f_st:main"
brain-even = "brain_games.scripts.even:run_game"
brain-calc = "brain_games.scripts.calc:run_game"
brain-gcd = "brain_games.scripts.gcd:run_game"
brain-progression = "brain_games.scripts.progression:run_game"
brain-prime = "brain_games.scripts.prime:run_game"
brain-game = "brain_games.launcher:main"
