[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A collection of fun and challenging brain games designed to improve cognitive skills."
authors = ["Dmitry Yarinsky <pikachyshkaa@gmail.com>"]
packages = [
  { include = "brain_games" },
]

classifiers = [
    "Development Status :: 4 - Release",
    "Intended Audience :: Education",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

repository = "https://github.com/Pikachy337/python-project-49"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"
flake8 = "^7.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_game:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
brain-game = "brain_games.launcher:main"
